# System-wymiany-plik-w-P2P

./: .gitignore  CMakeLists.txt  CMakeSettings.json
.github/workflows/: cmake.yml
Bencode/: Bencode.cpp  Bencode.h  CMakeLists.txt  Coders.h  Types.h  types.h
Bencode/Coders/: Decoder.cpp  Decoder.h  Encoder.cpp  Encoder.h  Exception.cpp  Exception.h  Utf8Decoder.cpp  Utf8Decoder.h
Bencode/Types/: Dictionary.cpp  Dictionary.h  ICode.h  Int.cpp  Int.h  List.cpp  List.h  String.cpp  String.h  Type.h
Client/: BitSet.cpp  BitSet.h  BufferManager.cpp  BufferManager.h  CMakeLists.txt  Client.cpp  Client.h  Client.sln  ConnectionStatus.h  DownloadFileWindow.cpp  DownloadFileWindow.h  DownloadFileWindow.ui  File.cpp  File.h  FileFrag.cpp  FileFrag.h  FileSize.cpp  FileSize.h  InfoDictHash.cpp  InfoDictHash.h  PeerConnection.cpp  PeerConnection.h  ShareFileWindow.cpp  ShareFileWindow.h  ShareFileWindow.ui  SocketManager.cpp  SocketManager.h  Torrent.cpp  Torrent.h  TorrentConfig.h  TorrentDownloadStatus.h  TorrentDownloader.cpp  TorrentDownloader.h  TorrentFile.cpp  TorrentFile.h  TorrentFileStatus.h  TorrentManager.cpp  TorrentManager.h  TrackerConnection.cpp  TrackerConnection.h  (+12 more)
Client/Client/: Client.vcxproj  Client.vcxproj.filters  File.cpp  File.h  FileFrag.cpp  ShareFileWindow.h  ShareFileWindow.ui  Window.cpp  Window.h
TorrentFile/: CMakeLists.txt  File.cpp  File.h  FileFrag.cpp  FileFrag.h  Peer.h  TorrentFile.cpp  TorrentFile.h  TrackerRequest.cpp  TrackerRequest.h  torrentReader.cpp  torrentReader.h
Tracker/: CMakeLists.txt  Connection.cpp  Connection.h  Server.cpp  Server.h  TorrentInstanceInfo.cpp  TorrentInstanceInfo.h  TrackerRequest.cpp  TrackerRequest.h  TrackerResponse.cpp  TrackerResponse.h  main.c  main.cpp  torrentReader.cpp  torrentReader.h
